kubernetes/apps/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 53
          name: dns
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 67
          name: dhcp
          protocol: UDP
        - containerPort: 80
          name: web
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/pihole
        - name: dnsmasq-volume
          mountPath: /etc/dnsmasq.d
        - name: custom-dns
          mountPath: /etc/pihole/custom.list
          subPath: custom.list
        - name: dnsmasq-config
          mountPath: /etc/dnsmasq.d/99-custom.conf
          subPath: 99-custom.conf
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: pihole-config
      - name: dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-dnsmasq
      - name: custom-dns
        configMap:
          name: pihole-custom-dns
      - name: dnsmasq-config
        configMap:
          name: pihole-dnsmasq-config
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - 1.1.1.1
        - 8.8.8.8
