kubernetes/apps/pihole/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`pihole.homelab.local`)
    kind: Rule
    services:
    - name: pihole-web
      port: 80
  tls:
    secretName: pihole-tls
